<resources>
    <string name="app_name">Sayac Uygulmasi</string>
    <string name="counter">Sayac</string>
    <string name="splash_screen_text">Işıl Vatansever\n201813709066</string>
    <string name="counter_intial_value">0</string>
    <string name="btn_increment_text">+</string>
    <string name="btn_decrement_text">-</string>
    <string name="btn_settings">Ayarlar</string>
    <string name="switch_notifications">Limit Uyarıları</string>
    <string name="switch_on">Açık</string>
    <string name="switch_off">Kapalı</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>




    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>